--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nestjs-redis-cluster",
-  "version": "1.2.10",
+  "version": "1.2.11",
   "description": "A nestjs redis module w/ cluster support",
   "author": "Ishmael Samuel (useparagon.com)",
   "license": "MIT",
@@ -20,17 +20,18 @@
     "lint": "tslint -p tsconfig.json -c tslint.json"
   },
   "dependencies": {
-    "@nestjs/common": "6.3.1",
-    "@nestjs/core": "^6.6.7",
+    "@nestjs/common": "^8.0.7",
+    "@nestjs/config": "^0.6.3",
+    "@nestjs/core": "^8.0.7",
     "@types/ioredis": "^4.0.4",
     "@types/uuid": "^3.4.4",
     "ioredis": "^4.2.0",
-    "reflect-metadata": "^0.1.12",
+    "reflect-metadata": "0.1.13",
     "rxjs": "^6.2.2",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "@nestjs/testing": "6.3.1",
+    "@nestjs/testing": "^8.0.7",
     "@types/node": "^10.7.1",
     "cz-conventional-changelog": "^2.1.0",
     "jest": "^23.6.0",
