--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nestjs-redis-cluster",
-  "version": "2.0.0",
+  "name": "nestjs-redis-cluster-anakshiant",
+  "version": "2.0.1",
   "description": "A nestjs redis module w/ cluster support",
   "author": "Ishmael Samuel (useparagon.com)",
   "license": "MIT",
@@ -26,8 +26,15 @@
     "@types/uuid": "^3.4.4",
     "ioredis": "^4.2.0",
     "reflect-metadata": "0.1.13",
-    "rxjs": "^6.2.2",
+    "rxjs": "^7.3.0",
     "uuid": "^3.3.2"
+  },
+  "peerDependencies": {
+    "@nestjs/common": "^8.0.0",
+    "@nestjs/core": "^8.0.0",
+    "ioredis": "^4.0.0",
+    "rxjs": "^7.0.0",
+    "uuid": "^3.0.0"
   },
   "devDependencies": {
     "@nestjs/testing": "^8.0.7",
