--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nestjs-redis-cluster-anakshiant",
+  "name": "nestjs-redis-cluster",
   "version": "2.0.1",
   "description": "A nestjs redis module w/ cluster support",
   "author": "Ishmael Samuel (useparagon.com)",
