--- a/package.json
+++ b/package.json
@@ -28,17 +28,11 @@
     "rxjs": "^7.3.0",
     "uuid": "^3.3.2"
   },
-  "peerDependencies": {
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
-    "ioredis": "^4.28.5",
-    "rxjs": "^7.0.0",
-    "uuid": "^3.0.0"
-  },
   "devDependencies": {
     "@nestjs/testing": "^8.0.7",
     "@types/node": "^10.7.1",
     "cz-conventional-changelog": "^2.1.0",
+    "ioredis": "^4.28.5",
     "jest": "^23.6.0",
     "prettier": "^1.19.1",
     "rimraf": "^2.6.3",
@@ -47,6 +41,13 @@
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.0.1",
     "typescript": "^3.6.4"
+  },
+  "peerDependencies": {
+    "@nestjs/common": "^8.0.0",
+    "@nestjs/core": "^8.0.0",
+    "ioredis": "4.x",
+    "rxjs": "^7.0.0",
+    "uuid": "^3.0.0"
   },
   "keywords": [
     "nestjs",
