--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@nestjs/testing": "^8.0.7",
+    "@types/ioredis": "^4.28.5",
     "@types/node": "^10.7.1",
     "cz-conventional-changelog": "^2.1.0",
     "ioredis": "^4.28.5",
