--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/testing": "^8.0.7",
     "@types/ioredis": "^4.28.5",
     "@types/node": "^10.7.1",
+    "@types/uuid": "^8.3.2",
     "cz-conventional-changelog": "^2.1.0",
     "ioredis": "^4.28.5",
     "jest": "^23.6.0",
@@ -46,7 +47,7 @@
     "@nestjs/core": "^8.0.0",
     "ioredis": "4.x",
     "rxjs": "^7.0.0",
-    "uuid": "^3.0.0"
+    "uuid": "^8.3.2"
   },
   "keywords": [
     "nestjs",
