chore(ci): upgrade whiskers version

--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "@types/node": "^10.7.1",
     "@types/uuid": "^8.3.2",
     "cz-conventional-changelog": "^2.1.0",
-    "@useparagon/whiskers-cli": "0.0.1-canary.15",
-    "@useparagon/whiskers-core": "0.0.1-canary.15",
+    "@useparagon/whiskers-cli": "2024.06.14",
+    "@useparagon/whiskers-core": "2024.06.14",
     "ioredis": "^4.28.5",
     "jest": "^23.6.0",
     "prettier": "^1.19.1",
